# mcu-framework

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.ps1  build.sh  config.mk  config.mk.ESP8266  config.mk.STM32F0  config.mk.STM32F1  footer.mk  header.mk  header.mk.ESP8266  header.mk.STM32F0  header.mk.STM32F1  main.cpp  makefile  makefile.STM32F0  makefile.STM32F1  makefile.STM32F4
.github/workflows/: build.yml
debug-probes/: esptool.cmake  jlink.cmake  openocd.cmake  st-link.cmake  uf2-bootloader.cmake
drivers/: CMakeLists.txt
drivers/include/drivers/: dataflash.hpp  dht.hpp  ds18b20.hpp  encoder.hpp  gpio_pin_debouncer.hpp  hd44780.hpp  nrf24l01.hpp  onewire.hpp  sd.hpp  sd_cid_csd_reg.hpp  sd_spi.hpp  singlewire.hpp
drivers/src/: dataflash.cpp  dht.cpp  ds18b20.cpp  encoder.cpp  freertos_wrappers.hpp  gpio_pin_debouncer.cpp  hd44780.cpp  nrf24l01.cpp  onewire.cpp  sd.cpp  sd_spi.cpp  singlewire.cpp
examples/: 1wire.cpp  CMakeLists-STM32F0.txt  CMakeLists-STM32F1.txt  CMakeLists-STM32F4.txt  blink-rp2040.example.cpp  blink.example.cpp  dataflash.example.cpp  dht.example.cpp  ds18b20.cpp  encoder.example.cpp  gpio_pin_debouncer.example.cpp  hd44780.example.cpp  sd.example.cpp  singlewire.example.cpp
examples/esp32s3/: CMakeLists.txt  wi-fi-example.cpp
examples/rp2040/: CMakeLists.txt  blink-example.cpp
examples/stm32f0/: CMakeLists.txt  blink-example.cpp  exti-example.cpp  nrf24l01-receiver-with-ack-example.cpp  spi-example.cpp  timer-example.cpp  uart-example.cpp  watchdog-example.cpp
examples/stm32f1/: CMakeLists.txt  adc-example.cpp  blink-example.cpp  dac-example.cpp  exti-example.cpp  nrf24l01-transmitter-with-ack-example.cpp  pwm-example.cpp  spi-example.cpp  timer-example.cpp  uart-example.cpp  watchdog-example.cpp
examples/stm32f4/: 1wire-example.cpp  CMakeLists.txt  blink-example.cpp  dac-example.cpp  dataflash-example.cpp  dht-example.cpp  ds18b20-example.cpp  encoder-example.cpp  exti-example.cpp  fatfs_diskio-example.cpp  gpio_pin_debouncer-example.cpp  hd44780-example.cpp  i2c-example.cpp  pwm-example.cpp  rtc-example.cpp  sd-example.cpp  singlewire-example.cpp  spi-example.cpp  timer-example.cpp  uart-example.cpp
fatfs_diskio/: CMakeLists.txt  fatfs_diskio.cpp  fatfs_diskio.hpp  fatfs_diskio_dataflash.cpp  fatfs_diskio_dataflash.hpp  fatfs_diskio_sd.cpp  fatfs_diskio_sd.hpp
periph/: CMakeLists.txt
periph/esp32s3/: CMakeLists.txt  esp-idf-rename-flash-target.patch  sdkconfig.defaults
periph/esp32s3/src/: gpio_esp32s3.cpp
periph/include/periph/: adc.hpp  dac.hpp  exti.hpp  gpio.hpp  i2c.hpp  pwm.hpp  rtc.hpp  spi.hpp  systick.hpp  timer.hpp  uart.hpp  wdt.hpp
periph/rp2040/: CMakeLists.txt
periph/rp2040/include/: FreeRTOSConfig.h
periph/rp2040/src/: FreeRTOSHooks.c  gpio_rp2040.cpp
periph/stm32f0/: CMakeLists.txt
periph/stm32f0/CMSIS/: CMakeLists.txt
periph/stm32f0/include/: FreeRTOSConfig.h
periph/stm32f0/include/periph/: dma_stm32f0.hpp  exti_stm32f0.hpp  gpio_stm32f0.hpp  spi_stm32f0.hpp  timer_stm32f0.hpp  uart_stm32f0.hpp
periph/stm32f0/src/: assert.c  dma_stm32f0.cpp  exti_stm32f0.cpp  fault_handlers.c  gpio_hw_mapping.hpp  gpio_stm32f0.cpp  rcc.hpp  spi_stm32f0.cpp  systick.cpp  timer_hw_mapping.hpp  timer_stm32f0.cpp  uart_stm32f0.cpp  wdt.cpp
periph/stm32f1/: CMakeLists.txt
periph/stm32f1/CMSIS/: CMakeLists.txt
periph/stm32f1/include/: FreeRTOSConfig.h
periph/stm32f1/include/periph/: adc_stm32f1.hpp  dac_stm32f1.hpp  dma_stm32f1.hpp  exti_stm32f1.hpp  gpio_stm32f1.hpp  pwm_stm32f1.hpp  spi_stm32f1.hpp  timer_stm32f1.hpp  uart_stm32f1.hpp
periph/stm32f1/src/: adc_stm32f1.cpp  assert.c  dac_stm32f1.cpp  dma_stm32f1.cpp  exti_stm32f1.cpp  fault_handlers.c  gpio_hw_mapping.hpp  gpio_stm32f1.cpp  pwm_stm32f1.cpp  rcc.hpp  spi_stm32f1.cpp  systick.cpp  timer_hw_mapping.hpp  timer_stm32f1.cpp  uart_stm32f1.cpp  wdt.cpp
periph/stm32f4/: CMakeLists.txt
periph/stm32f4/CMSIS/: CMakeLists.txt
periph/stm32f4/CMSIS/Device/ST/STM32F4xx/Source/linker/: STM32F407VGTx_FLASH.ld  STM32F413ZHTx_FLASH.ld
periph/stm32f4/include/: FreeRTOSConfig.h
periph/stm32f4/include/periph/: dac_stm32f4.hpp  dma_stm32f4.hpp  exti_stm32f4.hpp  gpio_stm32f4.hpp  i2c_stm32f4.hpp  pwm_stm32f4.hpp  spi_stm32f4.hpp  timer_stm32f4.hpp  uart_stm32f4.hpp
periph/stm32f4/src/: FreeRTOSHooks.c  assert.c  dac_stm32f4.cpp  dma_stm32f4.cpp  exti_stm32f4.cpp  fault_handlers.c  gpio_hw_mapping.hpp  gpio_stm32f4.cpp  i2c_stm32f4.cpp  pwm_stm32f4.cpp  rcc.hpp  rtc.cpp  spi_stm32f4.cpp  systick.cpp  timer_hw_mapping.hpp  timer_stm32f4.cpp  uart_stm32f4.cpp  wdt.cpp
src/: main.cpp  makefile
src/common/: assert.c  assert.h  macros.h  makefile
src/drv/: makefile
src/drv/1w/: 1w.cpp  1w.hpp  usage.example
src/drv/dataflash/: dataflash.cpp  dataflash.example.cpp  dataflash.hpp
src/drv/dht/: dht.cpp  dht.example.cpp  dht.hpp
src/drv/dht11/: dht11.cpp  dht11.example.cpp  dht11.hpp
src/drv/dht22/: dht22.cpp  dht22.example.cpp  dht22.hpp
src/drv/di/: di.cpp  di.example.cpp  di.hpp  usage.example
src/drv/ds18b20/: ds18b20.cpp  ds18b20.example.cpp  ds18b20.hpp  usage.example
src/drv/enc/: enc.cpp  enc.example.cpp  enc.hpp  usage.example
src/drv/gps/: nmea.cpp  nmea.example.cpp  nmea.hpp
src/drv/hd44780/: hd44780.cpp  hd44780.example.cpp  hd44780.hpp  usage.example
src/drv/onewire/: onewire.cpp  onewire.example.cpp  onewire.hpp  usage.example
src/drv/sd/: sd.cpp  sd.example.cpp  sd.hpp  sd_cid_csd_reg.hpp  sd_spi.cpp  sd_spi.hpp  usage.example
src/drv/singlewire/: singlewire.cpp  singlewire.example.cpp  singlewire.hpp
src/hal/ESP8266/: eagle.app.v6.common.ld  eagle.app.v6.ld  eagle.app.v6.new.1024.app1.ld  eagle.app.v6.new.1024.app2.ld  eagle.app.v6.new.2048.ld  eagle.app.v6.new.512.app1.ld  eagle.app.v6.new.512.app2.ld  esp8266.common.ld  esp8266.ld  gpio.cpp  gpio.hpp  makefile
src/hal/STM32F0/: STM32F072RBTx_FLASH.ld  dma.cpp  dma.hpp  exti.cpp  exti.hpp  gpio.cpp  gpio.hpp  makefile  makefile.example  rcc.cpp  rcc.hpp  systick.cpp  tim.cpp  (+2 more)
src/ul/: makefile
(+168 files in other folders)
